# first-game-cpp

./: CMakeLists.txt  LevelManager.cpp  LevelManager.h  ResourceManager.h  TileBase.cpp  TileBase.h  background.cpp  background.h  base.cpp  base.h  ground.cpp  ground.h  level_reader.cpp  level_reader.h  main.cpp  resources.cpp  resources.h  settings.cpp  settings.h  tile.cpp  tile.h  ui.cpp  ui.h
saves/: 1.txt
tiles/: Brick.h  Elixir.h  ElixirClump.h  ElixirPump.h  ElixirStorage.h
